# fast-image

./: COMPRESSION_RESULTS.md  Cargo.toml  DOCS_INDEX.md  PERFORMANCE_ANALYSIS.md  README.md  TEST_REPORT.md  build-multiplatform.bat  build-multiplatform.sh  release.bat  release.sh
.cargo/: config.toml
.github/: release-config.yml
.github/workflows/: build-multiplatform.yml
images/: README.md
src/: jni_call.rs  lib.rs  opts.rs  opts_optimized.rs
tests/: compression_tests.rs  performance_benchmark.rs
